cmake_minimum_required(VERSION 2.8.3)
project(rh_p12_rn_description)

################################################################################
# Packages
################################################################################
find_package(catkin REQUIRED)

################################################################################
# Catkin specific configuration
################################################################################
catkin_package()

################################################################################
# Install
################################################################################

install(DIRECTORY
  doc
  meshes
  urdf
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
)
